nbnb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: app-routing
  labels:
    app: frontend
  name: mydeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: belsaadi/voll1
        name: voll1
        resources: {}
status: {}
