nbnbapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: app-routing
  labels:
    app: api
  name: mydeployapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - image: belsaadi/voll2
        name: voll2
        resources: {}
status: {}
