pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
spec:
  containers:
    - name: mypod
      image: nginx
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
    - name: mypod2
      image: httpd
      ports:
        - name: http2
          containerPort: 8080
          protocol: TCP
      command: ["/bin/sh"]
      args:
        - "-c"
        - |
          sed -i 's/^Listen 80/Listen 8080/' /usr/local/apache2/conf/httpd.conf
          httpd-foreground
