podconfigmap1.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: mycontainer
      image: busybox
      command:
        - sh
        - -c
        - |
          echo "NAME = $NAME"
          echo "BASE_URL + $BASE_URL"
          sleep 50
