podmyimage.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod1
  labels:
    app: frontend1
spec:
  containers:
    - name: mypod1
      image: belsaadi/nginx-vim-server1:latest
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod2
  labels:
    app: frontend2
spec:
  containers:
    - name: mypod2
      image: belsaadi/nginx-vim-server2:latest
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
