podsecretopaque.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: mycontainer
      image: busybox
      command:
        - sh
        - -c
        - |
          sleep infinity
