volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  volumes:
    - name: emptidir-volume
      emptyDir: {}
  containers:
    - name: main-container
      image: nginx
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
      volumeMounts:
        - name: emptidir-volume
          mountPath: /ines/hobi
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 30
        periodSeconds: 10
        timeoutSeconds: 3
        successThreshold: 1
        failureThreshold: 3
