nbnb2api.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-svc
  name: api-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
status:
  loadBalancer: {}
