ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app-ingress
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: api-svc
            port:
              number: 80
        path: /api
        pathType: Prefix
status:
  loadBalancer: {}
